name:                goat
version:             0.1.0.0
synopsis:            Time Series Database
description:         Please see README.md
homepage:            https://github.com/lovasko/goat#readme
license:             BSD3
license-file:        LICENSE
author:              Daniel Lovasko
maintainer:          daniel.lovasko@gmail.com
copyright:           2016 Daniel Lovasko
category:            Database
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     GoatSwim.TimeFrame
                     , GoatSwim.Util
                     , GoatSwim.Frame
                     , GoatSwim.Fluid
                     , GoatSwim.Story
                     , GoatSwim.TimeFrame.Encode
                     , GoatSwim.TimeFrame.Decode
                     , GoatSwim.TimeFrame.Types
                     , GoatSwim.TimeFrame.Number
                     , GoatSwim.ValueFrame
                     , GoatSwim.ValueFrame.Encode
                     , GoatSwim.ValueFrame.Decode
                     , GoatSwim.ValueFrame.Types
  build-depends:       base >= 4.7 && < 5
                     , bifunctors
                     , bytestring 
                     , floating-bits
                     , safe
                     , split
  default-language:    Haskell2010

test-suite goat-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Prop.hs
  build-depends:       base
                     , QuickCheck
                     , goat
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/lovasko/goat
